Bug 10442 - Option "MergedFB" off leads to segfault
Summary: Option "MergedFB" off leads to segfault
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 10405 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-03-28 08:27 UTC by Vinícius Dias dos Santos
Modified: 2007-04-05 23:34 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
xorg.conf with mergedfb forced off (1.86 KB, text/plain)
2007-03-28 08:28 UTC, Vinícius Dias dos Santos
no flags Details
log with server backtrace (38.79 KB, text/plain)
2007-03-28 08:30 UTC, Vinícius Dias dos Santos
no flags Details
Stab in the dark (910 bytes, patch)
2007-03-28 23:04 UTC, Michel Dänzer
no flags Details | Splinter Review

Description Vinícius Dias dos Santos 2007-03-28 08:27:54 UTC
server, drm, xf86-video-ati from git.
Current xf86-video-ati seems to be detecting a secondary monitor(inexistant
in my setup) and trying MergedFB by default. That leads to a lower resolution
mode than usual(and than specified in xorg.conf).
When issued the config setting Option "MergedFB" "off", server segfaults.
Comment 1 Vinícius Dias dos Santos 2007-03-28 08:28:49 UTC
Created attachment 9334 [details]
xorg.conf with mergedfb forced off
Comment 2 Vinícius Dias dos Santos 2007-03-28 08:30:01 UTC
Created attachment 9335 [details]
log with server backtrace
Comment 3 Alex Deucher 2007-03-28 08:40:56 UTC
hmmm... looks like mergedfb is not actually getting forced off.
Comment 4 Sven Arvidsson 2007-03-28 14:21:18 UTC
*** Bug 10405 has been marked as a duplicate of this bug. ***
Comment 5 Sven Arvidsson 2007-03-28 14:28:32 UTC
I'm having the same problem with MergedFB, and had it disabled for the same reason, the driver seems to detect a nonexistant second monitor and thus I get no Xv for video playback.

As a work around I set "MonitorLayout" "NONE, TDMS", but this only gave me a blank screen. My TFT monitor (connected to the VGA port) is detected as CRT. Should I file a separate bug about this?

I'm using a ATI Radeon 9100
01:00.0 VGA compatible controller: ATI Technologies Inc Radeon R200 QM [Radeon 9100]

My backtrace of the crash, log file and configuration is available in the Debian bug I originally filed. Just ask and I will add any additional information needed. See http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=413463
Comment 6 Michel Dänzer 2007-03-28 22:45:16 UTC
(In reply to comment #5)
> I'm having the same problem with MergedFB, and had it disabled for the same
> reason, the driver seems to detect a nonexistant second monitor and thus I get
> no Xv for video playback.

See bug 5623 which also explains how to work around the Xv problem.

> As a work around I set "MonitorLayout" "NONE, TDMS", but this only gave me a
> blank screen. My TFT monitor (connected to the VGA port) is detected as CRT.
> Should I file a separate bug about this?

There's no bug, the VGA port implies CRT from the driver POV.
Comment 7 Michel Dänzer 2007-03-28 23:04:27 UTC
Created attachment 9340 [details] [review]
Stab in the dark

Does this happen to help at all? Dave or Alex would probably have better ideas.

Alternatively, does Option "MonitorLayout" "CRT,NONE" avoid the problem?
Comment 8 Sven Arvidsson 2007-03-29 04:42:21 UTC
> There's no bug, the VGA port implies CRT from the driver POV.

I see, thanks for the explanation. This does not seem to be mentioned in the radeon man page.

> Created an attachment (id=9340) [details]
> Stab in the dark
> 
> Does this happen to help at all? Dave or Alex would probably have better ideas

That seems to work great, no crash anymore, wonderful! :)

> Alternatively, does Option "MonitorLayout" "CRT,NONE" avoid the problem?

Yes, setting both Option "MergedFB" "false" and Option "MonitorLayout" "CRT, NONE" does avoid the crash. 
Comment 9 Alex Deucher 2007-03-29 05:13:45 UTC
(In reply to comment #7)
> Created an attachment (id=9340) [details]
> Stab in the dark
> 
> Does this happen to help at all? Dave or Alex would probably have better ideas.
> 
> Alternatively, does Option "MonitorLayout" "CRT,NONE" avoid the problem?
> 

Patch looks good to me.  I won't have time to test or debug this until this weekend.  If it works for Sven, I'd say commit it.
Comment 10 Michel Dänzer 2007-03-30 01:10:59 UTC
Fix pushed to git, thanks for testing.
Comment 11 Michel Dänzer 2007-04-02 05:35:12 UTC
*** Bug 10503 has been marked as a duplicate of this bug. ***
Comment 12 Vinícius Dias dos Santos 2007-04-05 16:16:17 UTC
The segfault is fixed with option mergedfb off, but now I get a blank("turned off") display with MergeFB Off or MonitorLayout CRT,NONE (or even NONE, CRT).
Leaving it closed since it's mainly about the segfault?
Comment 13 Michel Dänzer 2007-04-05 23:34:51 UTC
(In reply to comment #12)
> The segfault is fixed with option mergedfb off, but now I get a blank("turned
> off") display with MergeFB Off or MonitorLayout CRT,NONE (or even NONE, CRT).
> Leaving it closed since it's mainly about the segfault?

Right. Can you try current git without either option? It should no longer artificially limit the resolution. If you still have issues with that, please file a separate bug.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.