radeon: Guard some MergedFB specific code with info->MergedFB tests.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=10442 .